--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,7 @@ framework = arduino
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = arduino-libraries/LiquidCrystal@^1.0.7
+lib_deps =
+    arduino-libraries/LiquidCrystal@^1.0.7
+    SD
 
